# SFMLSandbox

./: .gitignore  Animated.cpp  Animated.h  Animated.hpp  CMakeLists.txt  GameObject.h  Makefile.linux  README.MD  ResourceManager.h  imgui.ini  main.cpp
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
